--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
+    "nodemailer": "^3.1.1",
     "path": "^0.12.7"
   }
 }
